Update README with important note to avoid errors and ensure Java 8